Moved detailed stats to the ride page. Fixed bug when no image was present. Fixed styling of description to maintain whitespace.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+.ride-description{
+	white-space: pre-wrap;
+}
